# ten-Tusscher-Panfilov-2006-finitewave-model

./: LICENSE  README.md  pyproject.toml
examples/: model_example.py  ten_tusscher_panfilov_2006_example.py
implementation/: model_0d.py  ten_tusscher_panfilov_2006.py
model_template/: ops.py
ten_tusscher_panfilov_2006/: ops.py
tests/: model_test.py
