[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "finitewave-model-ten-tusscher-panfilov-2006"
version = "0.2.0"
description = "ten Tusscher-Panfilov 2006 model."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["cardiac", "electrophysiology", "finitewave", "model"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Medical Science Apps."
]

dependencies = []

[project.entry-points."finitewave.models"]
ten_tusscher_panfilov_2006 = "ten_tusscher_panfilov_2006.ops"

[tool.hatch.build.targets.wheel]
packages = ["ten_tusscher_panfilov_2006"]

[tool.hatch.metadata]
allow-direct-references = true
